--- a/client/src/app/posts/all-posts/all-posts.component.html
+++ b/client/src/app/posts/all-posts/all-posts.component.html
@@ -5,11 +5,12 @@
     <button *ngIf="this.loggedUser" mat-stroked-button color="primary" (click)="this.openDialog()">Create post</button>
 
     <div class="posts-list">
-      <app-single-post-in-list *ngFor="let post of this.posts" [post]="post" class="one-post"
+      <ng-container *ngFor="let post of this.posts">
+      <app-single-post-in-list *ngIf="this.loggedUser || !post.isPrivate" [post]="post" class="one-post"
         (toUpdatePost)="this.updatePost($event)" (toLikePost)="this.likePost($event)"
         (deletePost)="this.deletePost($event)">
       </app-single-post-in-list>
-
+    </ng-container>
     </div>
   </div>
 </div>
