--- a/client/src/app/shared/components/update-post/update-post.component.html
+++ b/client/src/app/shared/components/update-post/update-post.component.html
@@ -2,20 +2,20 @@
   <form [formGroup]="this.updatePostForm" (ngSubmit)="this.updatePost(this.updatePostForm.value)">
     <mat-form-field>
       <input matInput placeholder="Add title" formControlName="title">
-      <mat-error *ngIf="this.updatePostForm.controls.title.errors?.minlength">
+      <mat-error *ngIf="!!this.updatePostForm.controls.title.errors?.minlength">
         The title must be at least 2 symbols long!
       </mat-error>
-      <mat-error *ngIf="this.updatePostForm.controls.title.errors?.maxlength">
-        The title must be shorter that 40 symbols!
+      <mat-error *ngIf="!!this.updatePostForm.controls.title.errors?.maxlength">
+        The title must be shorter that 60 symbols!
       </mat-error>
     </mat-form-field>
 
     <mat-form-field>
       <input matInput placeholder="Add content" formControlName="content">
-      <mat-error *ngIf="this.updatePostForm.controls.content.errors?.minlength">
-        The content of the post must be at least 10 symbols long!
+      <mat-error *ngIf="!!this.updatePostForm.controls.content.errors?.minlength">
+        The content of the post must be at least 5 symbols long!
       </mat-error>
-      <mat-error *ngIf="this.updatePostForm.controls.content.errors?.maxlength">
+      <mat-error *ngIf="!!this.updatePostForm.controls.content.errors?.maxlength">
         The content of the post must be shorter that 1000 symbols!
       </mat-error>
     </mat-form-field>
