--- a/client/src/app/comments/create-comment/create-comment.component.html
+++ b/client/src/app/comments/create-comment/create-comment.component.html
@@ -5,6 +5,12 @@
       <mat-error *ngIf="!!this.createCommentForm.controls.content.errors?.required">
         Some content is required!
       </mat-error>
+      <mat-error *ngIf="!!this.createCommentForm.controls.content.errors?.minlength">
+        The comment must be at least 5 symbols long!
+      </mat-error>
+      <mat-error *ngIf="!!this.createCommentForm.controls.content.errors?.maxlength">
+        The comment must be shorter that 500 symbols!
+      </mat-error>
     </mat-form-field>
 
     <button mat-icon-button class="create-comment-button" type="submit" [disabled]="this.createCommentForm.invalid">
