--- a/client/src/app/shared/components/update-post/update-post.component.html
+++ b/client/src/app/shared/components/update-post/update-post.component.html
@@ -1,7 +1,7 @@
 <div class="update-post-container">
   <form [formGroup]="this.updatePostForm" (ngSubmit)="this.updatePost(this.updatePostForm.value)">
     <mat-form-field>
-      <input matInput placeholder="Add title" formControlName="title">
+      <input matInput placeholder="Add title" formControlName="title" [value]="this.postToUpdate.title">
       <mat-error *ngIf="!!this.updatePostForm.controls.title.errors?.minlength">
         The title must be at least 2 symbols long!
       </mat-error>
@@ -11,7 +11,7 @@
     </mat-form-field>
 
     <mat-form-field>
-      <input matInput placeholder="Add content" formControlName="content">
+      <input matInput placeholder="Add content" formControlName="content" [value]="this.postToUpdate.content">
       <mat-error *ngIf="!!this.updatePostForm.controls.content.errors?.minlength">
         The content of the post must be at least 5 symbols long!
       </mat-error>
