--- a/client/src/app/shared/components/single-post-in-list/single-post-in-list.component.html
+++ b/client/src/app/shared/components/single-post-in-list/single-post-in-list.component.html
@@ -31,7 +31,7 @@
     </mat-card>
     <mat-card>
       <app-update-post *ngIf="this.isPostForUpdate===true"
-      (toUpdatePost)="this.updatePost($event)" [val]="this.postToShow.id"></app-update-post>
+      (toUpdatePost)="this.updatePost($event)" [postToUpdate]="this.postToShow"></app-update-post>
     </mat-card>
   </div>
 </div>
