btns for create/update posts&comments look better

--- a/client/src/app/comments/single-comment/single-comment.component.html
+++ b/client/src/app/comments/single-comment/single-comment.component.html
@@ -41,7 +41,7 @@
     
         <button mat-icon-button class="update-comment-button" type="submit" [disabled]="this.updateCommentForm.invalid">
           <i class="material-icons">
-            book
+            assignment_turned_in
           </i>
         </button>
       </form>
