--- a/client/src/app/shared/components/update-post/update-post.component.html
+++ b/client/src/app/shared/components/update-post/update-post.component.html
@@ -27,9 +27,8 @@
     </mat-radio-group>
 
     <button mat-icon-button class="create-post-button" type="submit" [disabled]="this.updatePostForm.invalid">
-      Update Post
       <i class="material-icons">
-        book
+        assignment_turned_in
       </i>
     </button>
   </form>
