--- a/client/src/app/comments/create-comment/create-comment.component.html
+++ b/client/src/app/comments/create-comment/create-comment.component.html
@@ -15,7 +15,7 @@
 
     <button mat-icon-button class="create-comment-button" type="submit" [disabled]="this.createCommentForm.invalid">
       <i class="material-icons">
-        book
+        assignment_turned_in
       </i>
     </button>
   </form>
