--- a/client/src/app/shared/components/create-post/create-post.component.html
+++ b/client/src/app/shared/components/create-post/create-post.component.html
@@ -59,9 +59,8 @@
     </mat-radio-group>
 
     <button mat-icon-button class="create-post-button" type="submit" [disabled]="!this.createPostForm.valid || !this.croppedImage" >
-      Create Post
       <i class="material-icons">
-        book
+        assignment_turned_in
       </i>
     </button>
   </form>
