--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-header>
-<router-outlet></router-outlet>
+  <div class='outlet-container'>
+      <router-outlet></router-outlet>
+  </div>
 </app-header>
 
 
