--- a/client/src/app/shared/components/single-post-in-list/single-post-in-list.component.html
+++ b/client/src/app/shared/components/single-post-in-list/single-post-in-list.component.html
@@ -1,17 +1,23 @@
 <div *ngIf="(this.postToShow)" class="post-info-container">
   <div class="single-post-in-list-container" post="post.title">
     <mat-card>
-      <img src="{{this.postToShow.imageURL}}">
+        <mat-card-header>
+            <img mat-card-avatar
+            [src]="this.postToShow.authorUrl">
+            <mat-card-title>{{this.postToShow.author}}</mat-card-title>
+            <mat-card-subtitle>Title goes here</mat-card-subtitle>
+          </mat-card-header>
+      <img class='post-image' src="{{this.postToShow.imageURL}}" (click)="this.openSinglePost()">
       <div class="post-item">
-        Title: {{ this.postToShow.title }} <br />
+        <!-- Title: {{ this.postToShow.title }} <br />
         Content: {{ this.postToShow.content }} <br />
         Posted on: {{ this.postToShow.dateCreated }}<br />
         By: {{ this.postToShow.author }}<br />
         Private? {{ this.postToShow.isPrivate }}<br />
-        Comments: {{ this.postToShow.commentsCount }}<br />
-        <button (click)="this.openSinglePost()">Open me</button>
+        Comments: {{ this.postToShow.commentsCount }}<br /> -->
       </div>
-      <button mat-icon-button (click)="this.turnOnOffUpdatePostForm()"
+      <mat-card-actions>
+          <button mat-icon-button (click)="this.turnOnOffUpdatePostForm()"
       *ngIf="this.loggedUser && this.loggedUser.username === this.postToShow.author">
         <i class="material-icons">
           build
@@ -28,10 +34,12 @@
           thumb_up
         </i>
       </button> {{ this.postToShow.likes }}
+      </mat-card-actions>
+
     </mat-card>
-    <mat-card>
+    <!-- <mat-card>
       <app-update-post *ngIf="this.isPostForUpdate===true"
       (toUpdatePost)="this.updatePost($event)" [val]="this.postToShow.id"></app-update-post>
-    </mat-card>
+    </mat-card> -->
   </div>
 </div>
