--- a/client/src/app/users/profile/profile-gallery/profile-gallery.component.html
+++ b/client/src/app/users/profile/profile-gallery/profile-gallery.component.html
@@ -1,6 +1,7 @@
 <div class="main" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50" (scrolled)="onScroll()">
 
-  <ng-container *ngFor="let post of this.profilePosts">
+  <div class="posts-list">
+  <ng-container *ngFor="let post of this.profilePosts" >
  <app-single-post-in-list *ngIf="!this.post.isPrivate || this.profileInfo.isFollowed"
  [post]="post" class="one-post"
  (deletePost)="this.deletePost($event)"
@@ -9,5 +10,6 @@
  >
   </app-single-post-in-list>
 </ng-container>
+</div>
 </div>
 
