--- a/client/src/app/users/profile/profile-info/profile-info.component.html
+++ b/client/src/app/users/profile/profile-info/profile-info.component.html
@@ -15,7 +15,7 @@
   </mat-card>
 
   <mat-toolbar class='profile-navbar'>
-      <button *ngIf="this.profile.isOwner" mat-raised-button (click)="openDialog()">Add Pic</button>
+      <button *ngIf="this.profile.isOwner" mat-raised-button (click)="openDialogPost()">Add Pic</button>
       <button mat-raised-button [routerLink]="['posts']">Pics</button>
       <button mat-raised-button [routerLink]="['followers']">Followers</button>
       <button mat-raised-button [routerLink]="['following']">Following</button>
