--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -4,25 +4,25 @@
       [mode]="(isHandset | async)!.matches ? 'over' : 'side'" [opened]="!(isHandset | async)!.matches">
       <mat-toolbar color="secondary">Menu</mat-toolbar>
       <mat-nav-list>
-        <a mat-list-item [routerLink]="['users/register']" *ngIf="!this.loggedUser">Register</a>
+        <a mat-list-item [routerLink]="['home']">Home</a>
         <a mat-list-item [routerLink]="['users/login']" *ngIf="!this.loggedUser">Login</a>
+        <a mat-list-item [routerLink]="['users/register']" *ngIf="!this.loggedUser">Register</a>
         <a mat-list-item  *ngIf="this.loggedUser" [routerLink]="['/users', loggedUser.id]">Profile</a>
         <a mat-list-item  *ngIf="this.loggedUser" (click)="this.logout()">Logout</a>
-        <a mat-list-item [routerLink]="['home']">Home</a>
       </mat-nav-list>
     </mat-sidenav>
 
     <mat-sidenav-content>
-      <mat-toolbar color="primary">
+      <mat-toolbar class="toolbar">
         <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" *ngIf="(isHandset | async)!.matches">
           <mat-icon aria-label="Side nav toggle icon">menu
           </mat-icon>
         </button>
-        <span style="cursor:pointer;" [routerLink]="['home']">11Forward</span>
+        <span style="cursor:pointer;" [routerLink]="['home']" class="eleven-forward">11Forward</span>
         <span class="spacer"></span>
         <span *ngIf="!(isHandset | async)!.matches">
-        <a mat-list-item [routerLink]="['users/register']" *ngIf="!this.loggedUser">Register</a>
         <a mat-list-item [routerLink]="['users/login']" *ngIf="!this.loggedUser">Login</a>
+        <a mat-list-item [routerLink]="['users/register']" *ngIf="!this.loggedUser">Register</a>
         <a mat-list-item  *ngIf="this.loggedUser" [routerLink]="['users', loggedUser.id]">Profile</a>
         <a mat-list-item  *ngIf="this.loggedUser" (click)="this.logout()">Logout</a>
         </span>
