--- a/client/src/app/shared/components/single-post-in-list/single-post-in-list.component.html
+++ b/client/src/app/shared/components/single-post-in-list/single-post-in-list.component.html
@@ -1,12 +1,14 @@
 <div *ngIf="(this.postToShow)" class="post-info-container">
   <div class="single-post-in-list-container" post="post.title">
     <mat-card>
-        <mat-card-header>
+
+        <mat-card-header [routerLink]="['/users', this.postToShow.authorId]">
             <img mat-card-avatar
             [src]="this.postToShow.authorUrl">
             <mat-card-title>{{this.postToShow.author}}</mat-card-title>
             <mat-card-subtitle>{{this.postToShow.title}}</mat-card-subtitle>
           </mat-card-header>
+
       <img class='post-image' src="{{this.postToShow.imageURL}}" (click)="this.openSinglePost()">
       <div class="post-item">
         <!-- Title: {{ this.postToShow.title }} <br />
