--- a/client/src/app/users/users.component.html
+++ b/client/src/app/users/users.component.html
@@ -1,1 +1,12 @@
-<p>users works!</p>
+<!-- <div class="main" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50" (scrolled)="onScroll()"> -->
+  Who resides in our quantum universe:
+  <div class="all-users-container">
+
+    <div class="users-list">
+      <ng-container *ngFor="let user of this.users">
+        <app-profile-card [profileInfo]="user" class="one-user">
+        </app-profile-card>
+      </ng-container>
+    </div>
+  </div>
+<!-- </div> -->
