user list is now paginated

--- a/client/src/app/users/users.component.html
+++ b/client/src/app/users/users.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="main" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50" (scrolled)="onScroll()"> -->
+<div class="main" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50" (scrolled)="onScroll()">
   Who resides in our quantum universe:
   <div class="all-users-container">
 
@@ -9,4 +9,4 @@
       </ng-container>
     </div>
   </div>
-<!-- </div> -->
+</div>
