--- a/client/src/app/users/profile/profile-card/profile-card.component.html
+++ b/client/src/app/users/profile/profile-card/profile-card.component.html
@@ -1,6 +1,6 @@
 <div class='card-holder'>
 
-    <mat-card (click)="navigate()">
+    <mat-card (click)="navigate()" style="cursor: pointer;">
         <mat-card-header>
             <img mat-card-avatar
 
