--- a/client/src/app/shared/components/single-post-in-list/single-post-in-list.component.scss
+++ b/client/src/app/shared/components/single-post-in-list/single-post-in-list.component.scss
@@ -8,7 +8,6 @@
   text-align: center;
 }
 
-.example-header-image {
-  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
-  background-size: cover;
+.profile-avatar:hover{
+  transform: scale(1.2);
 }
