user followers now have pagination

--- a/client/src/app/users/profile/proile-followers/proile-followers.component.html
+++ b/client/src/app/users/profile/proile-followers/proile-followers.component.html
@@ -1,9 +1,11 @@
-<div class="container">
+<div class="main" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50" (scrolled)="onScroll()">
+  <div class="container">
 
     <div *ngFor="let follower of profileFollowers">
-        <app-profile-card [profileInfo]="this.follower"></app-profile-card>
+      <app-profile-card [profileInfo]="this.follower"></app-profile-card>
     </div>
 
+  </div>
 </div>
 
 
