--- a/client/src/app/users/profile/proile-following/proile-following.component.scss
+++ b/client/src/app/users/profile/proile-following/proile-following.component.scss
@@ -1,4 +1,25 @@
-.container {
-  width: 70%;
-  margin: 0 auto;
+@media only screen and (max-width: 800px) {
+  .users-list {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr !important;
+    grid-gap: 10px;
+  }
+}
+
+.users-list {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
+}
+
+.one-user {
+    word-break: break-all;
+}
+
+.text {
+    font-family: sans-serif;
+    font-size: 14px;
+    text-align: center;
 }
