--- a/client/src/app/users/users.component.html
+++ b/client/src/app/users/users.component.html
@@ -1,7 +1,6 @@
 <div class="main" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50" (scrolled)="onScroll()">
-  Who resides in our quantum universe:
+  <div class="text">Who resides in our quantum universe:</div>
   <div class="all-users-container">
-
     <div class="users-list">
       <ng-container *ngFor="let user of this.users">
         <app-profile-card [profileInfo]="user" class="one-user">
