server-error page fix

--- a/client/src/app/components/server-error/server-error.component.html
+++ b/client/src/app/components/server-error/server-error.component.html
@@ -1,4 +1,4 @@
-<div class="not-found-container">
+<div class="server-error-container">
     <div class="image-container">
         <img src="./assets/robot-shaking-head.gif" class="image">
             <div class="text">
