--- a/client/src/app/components/server-error/server-error.component.scss
+++ b/client/src/app/components/server-error/server-error.component.scss
@@ -1,12 +1,11 @@
-.not-found-container {
-    height: 85vh;
+.server-error-container {
+    height: 80vh;
 }
 
 .image-container {
-    width: 50%;
+    width: 40%;
     position: relative;
-    top: 20%;
-    animation-name: moving;
+    top: 11%;
     animation-duration: 6s;
     animation-iteration-count: infinite;
     transition: transform .2s;
@@ -14,7 +13,7 @@
 }
   
   .image-container:hover {
-    transform: scale(1.5);
+    transform: scale(1.2);
 }
 
 .image {
@@ -23,6 +22,6 @@
 
 .text {
     font-family: sans-serif;
-    font-size: 3vw;
+    font-size: 20px;
     text-align: center;
 }
