--- a/client/src/app/users/profile/profile-card/profile-card.component.html
+++ b/client/src/app/users/profile/profile-card/profile-card.component.html
@@ -6,7 +6,7 @@
 
             [src]="this.profileInfo.avatarUrl">
             <mat-card-title >{{this.profileInfo.username}}</mat-card-title>
-            <mat-card-subtitle>{{this.profileInfo.email}}</mat-card-subtitle>
+            <mat-card-subtitle>Followers: {{this.profileInfo.followersCount}} &nbsp; &nbsp; Following: {{this.profileInfo.followingCount}}</mat-card-subtitle>
           </mat-card-header>
         <mat-card-content >
             <p>
