--- a/client/src/app/components/header/header.component.scss
+++ b/client/src/app/components/header/header.component.scss
@@ -11,6 +11,10 @@
   background-image: url('./../../../assets/horizon.jpg');
 }
 
+.logo {
+  max-height: 50px;
+}
+
 .hidden {
   display: none;
 }
