--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -25,9 +25,9 @@
         <span *ngIf="!(isHandset | async)!.matches">
         <a mat-list-item [routerLink]="['users/login']" *ngIf="!this.loggedUser">Login</a>
         <a mat-list-item [routerLink]="['users/register']" *ngIf="!this.loggedUser">Register</a>
-        <a mat-list-item  *ngIf="this.loggedUser" [routerLink]="['users']">Users</a>
-        <a mat-list-item  *ngIf="this.loggedUser" [routerLink]="['users', loggedUser.id]">Profile</a>
-        <a mat-list-item  *ngIf="this.loggedUser" (click)="this.logout()">Logout</a>
+        <a mat-list-item *ngIf="this.loggedUser" [routerLink]="['users']">Users</a>
+        <a mat-list-item *ngIf="this.loggedUser" [routerLink]="['users', loggedUser.id]">Profile</a>
+        <a mat-list-item *ngIf="this.loggedUser" style="cursor:pointer;" (click)="this.logout()">Logout</a>
         </span>
         <span class="spacer"></span>
       </mat-toolbar>
