confirmation for deleting users & posts added

--- a/client/src/app/shared/components/single-post-in-list/single-post-in-list.component.html
+++ b/client/src/app/shared/components/single-post-in-list/single-post-in-list.component.html
@@ -22,7 +22,7 @@
           build
         </i>
       </button>
-      <button mat-icon-button (click)="this.onDeletePost()"
+      <button mat-icon-button (click)="this.confirmDelete()"
       *ngIf="this.loggedUser && this.loggedUser.username === this.postToShow.author">
         <i class="material-icons">
           remove_circle
