--- a/client/src/app/posts/single-post-comments/single-post-comments.component.html
+++ b/client/src/app/posts/single-post-comments/single-post-comments.component.html
@@ -16,7 +16,7 @@
           build
         </i>
       </button>
-      <button mat-icon-button (click)="this.onDeletePost()"
+      <button mat-icon-button (click)="this.confirmDelete()"
       *ngIf="this.loggedUser && this.loggedUser.username === this.post.author">
         <i class="material-icons">
           remove_circle
