renaming container class for comments

--- a/client/src/app/comments/all-comments/all-comments.component.html
+++ b/client/src/app/comments/all-comments/all-comments.component.html
@@ -1,5 +1,5 @@
 <div class="main" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50" (scrolled)="onScroll()">
-  <div class="all-posts-container">
+  <div class="all-comments-container">
 
     <app-create-comment *ngIf="this.loggedUser" (toCreateComment)="this.createComment($event)"></app-create-comment>
 
