--- a/client/src/app/comments/single-comment/single-comment.component.html
+++ b/client/src/app/comments/single-comment/single-comment.component.html
@@ -1,11 +1,19 @@
 <div *ngIf="(this.commentToShow)" class="comment-info-container">
   <div class="single-comment-in-list-container" comment="comment.content">
     <mat-card>
+      <mat-card-header>
+          <img mat-card-avatar
+          [src]="this.commentToShow.authorAvatar"
+          (click)="this.navigate()">
+          <mat-card-title class="author-name">{{this.commentToShow.author}}</mat-card-title>
+      </mat-card-header>
       <div class="comment-item">
-        Content: {{ this.commentToShow.content }} <br />
-        Posted on: {{ this.commentToShow.dateCreated }}<br />
-        By: {{ this.commentToShow.author }}<br />
+        {{ this.commentToShow.content }}
       </div>
+
+      <div class="comment-time">
+         {{ this.commentToShow.dateCreated }}
+        </div>
       <button mat-icon-button (click)="this.turnOnOffUpdateCommentForm()"
       *ngIf="this.loggedUser && this.loggedUser.username === this.commentToShow.author">
         <i class="material-icons">
@@ -18,11 +26,16 @@
           remove_circle
         </i>
       </button>
-      <button mat-icon-button (click)="this.onLikeComment()">
-        <i class="material-icons">
-          thumb_up
-        </i>
-      </button> {{ this.commentToShow.likes }}
+      <span class='like-button'>
+
+          <button  mat-icon-button (click)="this.onLikeComment()">
+              <i class="material-icons">
+                thumb_up
+              </i>
+            </button> {{ this.commentToShow.likes }}
+
+      </span>
+
     </mat-card>
     <mat-card *ngIf="this.isCommentForUpdate === true">
       <form [formGroup]="this.updateCommentForm" (ngSubmit)="this.onUpdateComment(this.updateCommentForm.value)">
@@ -38,7 +51,7 @@
             The comment must be shorter that 500 symbols!
           </mat-error>
         </mat-form-field>
-    
+
         <button mat-icon-button class="update-comment-button" type="submit" [disabled]="this.updateCommentForm.invalid">
           <i class="material-icons">
             assignment_turned_in
