styling, no initial display of update card

--- a/client/src/app/posts/single-post-comments/single-post-comments.component.html
+++ b/client/src/app/posts/single-post-comments/single-post-comments.component.html
@@ -1,14 +1,9 @@
 <div *ngIf="(this.post)" class="post-info-container">
-  <div class="single-post-in-list-container" post="post.title">
+  <div class="single-post-container" post="post.title">
     <mat-card>
-      <img src="{{this.post.imageURL}}" class="post-img">
+      <img src="{{this.post.imageURL}}" class="post-image">
       <div class="post-item">
-        Title: {{ this.post.title }} <br />
-        Content: {{ this.post.content }} <br />
-        Posted on: {{ this.post.dateCreated }}<br />
-        By: {{ this.post.author }}<br />
-        Private? {{ this.post.isPrivate }}<br />
-        Comments: {{ this.post.commentsCount }}<br />
+      
       </div>
       <button mat-icon-button (click)="this.turnOnOffUpdatePostForm()"
       *ngIf="this.loggedUser && this.loggedUser.username === this.post.author">
@@ -29,15 +24,17 @@
       </button> {{ this.post.likes }}
     </mat-card>
   </div>
-  <mat-card>
-    <app-update-post *ngIf="this.isPostForUpdate===true"
+
+  <mat-card [style.display]="this.isPostForUpdate === true ? 'inherit' : 'none' ">
+    <app-update-post
     (toUpdatePost)="this.updatePost($event)" [postToUpdate]="this.post"></app-update-post>
   </mat-card>
-  <mat-card class="mat-card">
+
+
     <app-all-comments
     (hasCreatedComment)="this.hasNewComment($event)"
     (hasDeletedComment)="this.hasOneLessComment($event)"
     ></app-all-comments>
-  </mat-card>
+
 </div>
 
