--- a/client/src/app/posts/single-post-comments/single-post-comments.component.scss
+++ b/client/src/app/posts/single-post-comments/single-post-comments.component.scss
@@ -1,7 +1,20 @@
-.single-post-in-list-container{
+.post-info-container {
   text-align: center;
 }
 
-.post-img {
+.single-post-container{
+
+  margin: 0 auto;
+}
+
+@media only screen and (min-width: 600px) {
+  .single-post-container {
+    margin-top: 10px;
+    max-width: 50%;
+  }
+
+}
+
+.post-image {
   max-width: -webkit-fill-available;
 }
