--- a/client/src/app/users/profile/proile-followers/proile-followers.component.scss
+++ b/client/src/app/users/profile/proile-followers/proile-followers.component.scss
@@ -1,4 +1,10 @@
 .container {
-  min-width: 50%;
+  width: 50%;
   margin: 0 auto;
+}
+
+@media only screen and (max-width: 600px) {
+  .container {
+    width: 100%;
+  }
 }
