centering image cropper on desktop

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -27,6 +27,7 @@ img.source-image {
 }
 
 .mat-dialog-container {
+  margin: 0 auto;
   height: fit-content !important;
   max-height: 90vh;
   max-width: 70%;
