'avatarURL' variable to match user entity field

--- a/client/src/app/users/profile/profile-card/profile-card.component.html
+++ b/client/src/app/users/profile/profile-card/profile-card.component.html
@@ -4,7 +4,7 @@
         <mat-card-header>
             <img mat-card-avatar
 
-            [src]="this.profileInfo.avatarUrl">
+            [src]="this.profileInfo.avatarURL">
             <mat-card-title >{{this.profileInfo.username}}</mat-card-title>
             <mat-card-subtitle>Followers: {{this.profileInfo.followersCount}} &nbsp;
               &nbsp; Following: {{this.profileInfo.followingCount}}</mat-card-subtitle>
