--- a/client/src/app/shared/components/single-post-in-list/single-post-in-list.component.html
+++ b/client/src/app/shared/components/single-post-in-list/single-post-in-list.component.html
@@ -26,7 +26,7 @@
         <i class="material-icons">
           thumb_up
         </i>
-      </button> {{ this.postToShow.likes }}
+      </button> {{ this.postToShow.likes }} {{this.postToShow.commentsCount}}
       </mat-card-actions>
 
     </mat-card>
