--- a/client/src/app/users/register/register.component.scss
+++ b/client/src/app/users/register/register.component.scss
@@ -1,9 +1,5 @@
-.register-container {
-    background-color: palegreen;
-}
-
 .register-header {
-    background-color: palegreen;
+    background-color: rgb(152, 198, 251);
     display: block;
     margin-left: auto;
     margin-right: auto;
