--- a/client/src/app/posts/all-posts/all-posts.component.scss
+++ b/client/src/app/posts/all-posts/all-posts.component.scss
@@ -13,6 +13,20 @@
   }
 }
 
+.welcome-text {
+  font-family: sans-serif;
+  font-size: 18px;
+  text-align: center;
+  position: relative;
+  padding: 2%;
+}
+
+.create-post-button {
+  display: block;
+  margin: 0 auto;
+  background-color: rgb(152, 198, 251);
+}
+
 .posts-list {
   width:100%;
   padding: 5px;
