--- a/client/src/app/posts/all-posts/all-posts.component.scss
+++ b/client/src/app/posts/all-posts/all-posts.component.scss
@@ -1,13 +1,24 @@
-@media only screen and (max-width: 375px) {
+@media only screen and (max-width: 400px) {
   .posts-list {
-    width:100%;
+    width:100% !important;
+    margin: 0 auto;
     display: grid;
     grid-template-columns: 1fr !important;
     grid-gap: 10px;
   }
 }
 
-@media only screen and (min-width: 376px) and (max-width: 600px) {
+@media only screen and (min-width: 401px) and (max-width: 650px) {
+  .posts-list {
+    width:90% !important;
+    margin: 0 auto !important;
+    display: grid;
+    grid-template-columns: 1fr !important;
+    grid-gap: 10px;
+  }
+}
+
+@media only screen and (min-width: 651px) and (max-width: 1000px) {
   .posts-list {
     grid-template-columns: 1fr 1fr !important;
   }
@@ -28,8 +39,8 @@
 }
 
 .posts-list {
-  width:100%;
-  padding: 5px;
+  width:70%;
+  margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 10px;
