--- a/client/src/app/users/profile/profile-card/profile-card.component.html
+++ b/client/src/app/users/profile/profile-card/profile-card.component.html
@@ -1,24 +1,18 @@
 <div class='card-holder'>
 
-    <mat-card (click)="navigate()" style="cursor: pointer;">
-        <mat-card-header>
-            <img mat-card-avatar
+  <mat-card (click)="navigate()" style="cursor: pointer;">
+    <mat-card-header>
+      <img mat-card-avatar [src]="this.profileInfo.avatarURL">
+      <mat-card-title>{{this.profileInfo.username}}</mat-card-title>
+      <mat-card-subtitle>Followers: {{this.profileInfo.followersCount}} &nbsp;
+        &nbsp; Following: {{this.profileInfo.followingCount}}</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <p>
 
-            [src]="this.profileInfo.avatarURL">
-            <mat-card-title >{{this.profileInfo.username}}</mat-card-title>
-            <mat-card-subtitle>Followers: {{this.profileInfo.followersCount}} &nbsp;
-              &nbsp; Following: {{this.profileInfo.followingCount}}</mat-card-subtitle>
-          </mat-card-header>
-        <mat-card-content >
-            <p>
+      </p>
+    </mat-card-content>
 
-            </p>
-          </mat-card-content>
-
-    </mat-card>
+  </mat-card>
 
 </div>
-
-
-
-
