--- a/client/src/app/users/profile/profile-gallery/profile-gallery.component.html
+++ b/client/src/app/users/profile/profile-gallery/profile-gallery.component.html
@@ -1,15 +1,13 @@
 <div class="main" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50" (scrolled)="onScroll()">
 
   <div class="posts-list">
-  <ng-container *ngFor="let post of this.profilePosts" >
- <app-single-post-in-list *ngIf="!this.post.isPrivate || (this.profileInfo.isFollowed  || this.profileInfo.isOwner)"
- [post]="post" class="one-post"
- (deletePost)="this.deletePost($event)"
- (toUpdatePost)="this.updatePost($event)"
- (toLikePost)="this.likePost($event)"
- >
-  </app-single-post-in-list>
-</ng-container>
-</div>
+    <ng-container *ngFor="let post of this.profilePosts">
+      <app-single-post-in-list
+        *ngIf="!this.post.isPrivate || (this.profileInfo.isFollowed  || this.profileInfo.isOwner)" [post]="post"
+        class="one-post" (deletePost)="this.deletePost($event)" (toUpdatePost)="this.updatePost($event)"
+        (toLikePost)="this.likePost($event)">
+      </app-single-post-in-list>
+    </ng-container>
+  </div>
 </div>
 
