--- a/client/src/app/posts/single-post-comments/single-post-comments.component.scss
+++ b/client/src/app/posts/single-post-comments/single-post-comments.component.scss
@@ -15,6 +15,11 @@
 
 }
 
+.post-texts {
+  text-align: center;
+  word-break: break-all;
+}
+
 .post-image {
   max-width: -webkit-fill-available;
 }
